
===========================================================================
MARK: released gwenhywfar-3.3.4 (2008/06/09)
===========================================================================


2008/06/09: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in CSV exporter (note: GWEN_FASTBUFFER_WRITEBYTES only writes
  as many bytes as possible, use GWEN_FASTBUFFER_WRITEFORCED if you want
  all bytes to be written)


===========================================================================
MARK: released gwenhywfar-3.3.3 (2008/06/06)
===========================================================================


2008/06/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- changed the way the crypttoken password name is generated. It now
  creates the same names as AqHBCI
- decreased severity of message which asks the user to insert a card


2008/05/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in io_http.c (was waiting until timeout with a special 
  EBICS server)


===========================================================================
MARK: released gwenhywfar-3.3.2 (2008/05/27)
===========================================================================


2008/05/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io_http.c: fixed a bug in chunked download mode


===========================================================================
MARK: released gwenhywfar-3.3.1 (2008/04/25)
===========================================================================


2008/04/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug


===========================================================================
MARK: released gwenhywfar-3.3.0 (2008/04/22)
===========================================================================

