@@ -1,6 +1,6 @@
 
 ===========================================================================
-                    gwenhywfar-3.3.4 (2008/06/09)
+                    gwenhywfar-3.3.4 (2008/06/10)
 ===========================================================================
 
 This release fixes a bug in the CSV exporter.
